# flintrock

./: .gitignore  .travis.yml  CHANGES.md  CONTRIBUTING.md  COPYRIGHT  LICENSE  MANIFEST.in  README.md  config.yaml  config.yaml.template  ec2-ami-list.yaml  flintrock  flintrock.py  generate-standalone-package.py  hook-flintrock.py  install-spark.sh  lint.sh  make-release.sh  pyproject.toml  requirements-dev.txt  requirements.txt  setup-ephemeral-storage.py  setup.cfg  setup.py  spark-health.sh  standalone.py  test-integration.sh  tox.ini
.github/: ISSUE_TEMPLATE  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: flintrock.yaml  infra.yaml  infra.yml
flint/: async.py  ssh.py  util.py
flint/modules/: spark.py
flint/providers/: ec2.py
flintrock/: __init__.py  __main__.py  config.yaml.template  core.py  ec2.py  exceptions.py  flintrock.py  get-best-apache-mirror.py  services.py  setup-ephemeral-storage.py  ssh.py  util.py
flintrock/scripts/: adoptium.repo  adoptopenjdk.repo  download-hadoop.py  download-hadoop.sh  download-package.py  install-spark.sh  setup-ephemeral-storage.py
flintrock/templates/hadoop/conf/: core-site.xml  hadoop-env.sh  hdfs-site.xml  masters  slaves
flintrock/templates/spark/conf/: spark-defaults.conf  spark-env.sh
image-build/: .gitignore  README.md  build-spark-amis.sh  enable-root-login.sh  os-setup.sh  python-setup.sh  spark-packer-template.json  tools-setup.sh
requirements/: developer.in  developer.pip  maintainer.in  maintainer.pip  user.in  user.pip
templates/hadoop/conf/: core-site.xml  hdfs-site.xml  masters
templates/spark/conf/: spark-env.sh
test-infra/: .gitignore  README.md  bastion.tf  delete-test-infra.sh  network.tf  provider.tf  variables.tf
tests/: README.md  conftest.py  test_acceptance.py  test_core.py  test_ec2.py  test_flintrock.py  test_pyinstaller_packaging.py  test_scripts.py  test_static.py  test_style.py  test_util.py
