# See: https://packaging.python.org/en/latest/guides/single-sourcing-package-version/
[metadata]
version = attr: flintrock.__version__

[tool:pytest]
norecursedirs = venv
addopts =
    --verbose
    --cov flintrock
    --cov-report html
    -rs
    # --exitfirst

[flake8]
max-line-length = 100
exclude = venv, build, dist
ignore =
    E501
    E252
    F821
    F841
    W503
